--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@
 	#header
 	{
 		position: relative;
-		background: #ddd url("../images/header.jpg") no-repeat center;
+		background: #ddd url("http://drive.google.com/uc?export=view&id=1DJB6cktXL3aMZ79fzSvOlwVvxw86v_aw") no-repeat center;
 		background-size: cover;
 	}
 
